--- a/manifestos/cronjob-codecommit.yaml
+++ b/manifestos/cronjob-codecommit.yaml
@@ -27,7 +27,7 @@ spec:
           name: kube-backup
         spec:
           containers:
-          - image: quay.io/plange/kube-backup:1.12.0-1
+          - image: labsjac/kube-backup:latest
             imagePullPolicy: Always
             name: backup
             resources: {}
@@ -37,7 +37,7 @@ spec:
             - name: GIT_REPO
               value: "git@git.example.com:infra/kube-backup.git"
             - name: RESOURCETYPES
-              value: "ingress deployment configmap svc rc ds customresourcedefinition networkpolicy statefulset storageclass cronjob"
+              value: "ingress secrets deployment configmap svc rc ds customresourcedefinition networkpolicy statefulset storageclass cronjob"
             volumeMounts:
             - mountPath: /backup/
               name: cache
